# gesetze-im-internet

./: Cargo.toml  README.de.md  README.md
data/: bgb.xml
src/: client.rs  gesetz.rs  http_client.rs  lib.rs  main.rs  tests.rs  toc.rs
src/toc/: item.rs
