[package]
name = "gesetze_im_internet"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"

[dependencies]
reqwest = "0.9.17"
serde = "1.0.92"
serde-xml-rs = "0.3.1"
zip = "0.5.2"
regex = "1.1.6"
clap = "2.33.0"
lazy_static = "1.3.0"
log = "0.4.6"
stderrlog = "0.4.1"
tokio = "0.1.21"
url = "1.7.2"
futures = "0.1.27"
